tests/samples/negative/generics/empty_explicit_generic_call.ax
module empty_explicit_generic_call;

fn id<T>(value: T) -> T {
    return value;
}

fn main() -> i32 {
    return id<>(1);
}
